--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Takatsu-Yuki-portfolio-site",
+  "name": "p",
   "version": "0.0.1",
   "main": "index.js",
   "author": "Yuki Takatsu",
