プロジェクト基本情報更新

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "p",
-  "version": "0.0.1",
+  "name": "takatsu-portfolio",
+  "version": "1.0.0",
   "main": "index.js",
   "author": "Yuki Takatsu",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "type": "module",
   "scripts": {
     "prepare": "husky",
